--- a/index.html
+++ b/index.html
@@ -15,53 +15,143 @@
   <div class="weapon">
     <h3>Armas</h3>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="2000000" id="fal">
-      <label for="fal">Fal - R$ 2.000.000</label>
+      <input type="checkbox" class="item" data-valor="2200000" id="fal">
+      <label for="fal">FAL - R$ 2.200.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1500000" id="g36">
-      <label for="g36">G36 - R$ 1.500.000</label>
+      <input type="checkbox" class="item" data-valor="1800000" id="g36">
+      <label for="g36">G36 - R$ 1.800.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1350000" id="m4a4">
-      <label for="m4a4">M4A4 - R$ 1.350.000</label>
+      <input type="checkbox" class="item" data-valor="300000" id="HK">
+      <label for="HK">HK - R$ 300.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1450000" id="RAM-7">
-      <label for="RAM-7">RAM-7 - R$ 1.450.000</label>
+      <input type="checkbox" class="item" data-valor="2300000" id="Scar-H">
+      <label for="Scar-H">SCAR-H - R$ 2.300.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1250000" id="Scar-H">
-      <label for="Scar-H">Scar-H - R$ 1.250.000</label>
+      <input type="checkbox" class="item" data-valor="2200000" id="m4a1">
+      <label for="m4a1">M4A1 - R$ 2.200.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1100000" id="Mtar-21">
-      <label for="Mtar-21">Mtar-21 - R$ 1.100.000</label>
+      <input type="checkbox" class="item" data-valor="2200000" id="m4a4">
+      <label for="m4a4">M4A4 - R$ 2.200.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="1000000" id="Ak47">
-      <label for="Ak47">Ak47 - R$ 1.000.000</label>
+      <input type="checkbox" class="item" data-valor="1000000" id="Mtar-21">
+      <label for="Mtar-21">MTAR-21 - R$ 1.000.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="900000" id="Mp9">
-      <label for="Mp9">Mp9 - R$ 900.000</label>
+      <input type="checkbox" class="item" data-valor="1275000" id="Ak47MK2">
+      <label for="Ak47MK2">AK47 MK2 - R$ 1.275.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="700000" id="Machini">
-      <label for="Machini">Machini - R$ 700.000</label>
+      <input type="checkbox" class="item" data-valor="1150000" id="Ak47ADD">
+      <label for="Ak47ADD">AK47 ADD - R$ 1.150.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1350000" id="Ak47103">
+      <label for="Ak47103">AK47 103 - R$ 1.350.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
       <input type="checkbox" class="item" data-valor="1062000" id="Navy Carabine">
-      <label for="Navy Carabine">Navy Carabine - R$ 1.062.000</label>
+      <label for="Navy Carabine">NAVY CARABINE - R$ 1.062.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="500000" id="TEC-9">
+      <label for="TEC-9">TEC-9 - R$ 500.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="750000" id="Mp9">
+      <label for="Mp9">MP9 - R$ 750.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="350000" id="Five7">
+      <label for="Five7">FIVE 7 - R$ 350.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="350000" id="Glock-19">
+      <label for="Glock-19">GLOCK 19 - R$ 350.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="350000" id="UZI">
+      <label for="UZI">UZI - R$ 350.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1120000" id="MP5">
+      <label for="MP5">MP5 - R$ 1.120.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1100000" id="Thompson">
+      <label for="Thompson">THOMPSON - R$ 1.100.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1500000" id="HK416">
+      <label for="HK416">HK416 - R$ 1.500.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="500000" id="Pistol.50">
+      <label for="Pistol.50">PISTOLA .50 - R$ 500.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="380000" id="M9A3">
+      <label for="M9A3">M9A3 - R$ 380.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1680000" id="NSR">
+      <label for="NSR">NSR - R$ 1.680.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1000000" id="Scorpion">
+      <label for="Scorpion">SCORPION - R$ 1.000.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1300000" id="SigSauer">
+      <label for="SigSauer">SIGSAUER - R$ 1.300.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2400000" id="AR10">
+      <label for="AR10">AR10 - R$ 2.400.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="800000" id="Shotgun">
+      <label for="Shotgun">ESCOPETA - R$ 800.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1350000" id="RAM-7">
+      <label for="RAM-7">RAM-7 - R$ 1.350.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2000000" id="SniperRifle">
+      <label for="SniperRifle">SNIPER-RIFLE - R$ 2.000.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
   </div>
@@ -71,22 +161,117 @@
     <h3>Munição</h3>
     <div class="linha-item">
       <input type="checkbox" class="item" data-valor="6375" id="mun-fal">
-      <label for="mun-fal">Fal - R$ 6.375</label>
+      <label for="mun-fal">FAL - R$ 6.375</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="6800" id="mun-sniper">
-      <label for="sniper">Sniper - R$ 6.800</label>
+      <input type="checkbox" class="item" data-valor="6000" id="mun-g36">
+      <label for="mun-g36">G36 - R$ 6.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="6500" id="mun-g36">
-      <label for="mun-g36">G36 - R$ 6.500</label>
+      <input type="checkbox" class="item" data-valor="1000" id="mun-hk">
+      <label for="mun-hk">HK - R$ 1.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="6200" id="mun-m4a4">
-      <label for="mun-m4a4">M4A4 - R$ 6.200</label>
+      <input type="checkbox" class="item" data-valor="5400" id="mun-scar-h">
+      <label for="mun-scar-h">SCAR-H - R$ 4.200</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="4000" id="mun-m4a1">
+      <label for="mun-m4a1">M4A1 - R$ 4.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="4350" id="mun-m4a4">
+      <label for="mun-m4a4">M4A4 - R$ 4.350</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3375" id="mun-mtar-21">
+      <label for="mun-mtar-21">MTAR-21 - R$ 3.375</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3750" id="mun-ak47">
+      <label for="mun-ak47">AK47 - R$ 3.750</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3650" id="mun-navy-carabine">
+      <label for="mun-navy-carabine">NAVY CARABINE - R$ 3.650</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3400" id="mun-tec-9">
+      <label for="mun-tec-9">TEC-9 - R$ 3.400</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3000" id="mun-mp5">
+      <label for="mun-mp5">MP5 - R$ 3.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3200" id="mun-mp9">
+      <label for="mun-mp9">MP9 - R$ 3.200</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2100" id="mun-five-7">
+      <label for="mun-five-7">FIVE 7 - R$ 2.100</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="1400" id="mun-glock">
+      <label for="mun-glock">GLOCK 19 - R$ 1.400</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3000" id="mun-uzi">
+      <label for="mun-uzi">UZI - R$ 3.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3000" id="mun-thompson">
+      <label for="mun-thompson">THOMPSON - R$ 3.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="4875" id="mun-hk416">
+      <label for="mun-hk416">HK416 - R$ 4.875</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2500" id="mun-pistol.50">
+      <label for="mun-pistol.50">PISTOLA .50 - R$ 2.500</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3500" id="mun-nsr">
+      <label for="mun-nsr">NSR - R$ 3.500</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3100" id="mun-scorpion">
+      <label for="mun-scorpion">SCORPION - R$ 3.100</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2500" id="mun-sig-sauer">
+      <label for="mun-sig-sauer">SIGSAUER - R$ 2.500</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="5500" id="mun-ar10">
+      <label for="mun-ar10">AR10 - R$ 5.500</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="3000" id="mun-shotgun">
+      <label for="mun-shotgun">ESCOPETA - R$ 3.500</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
@@ -95,38 +280,8 @@
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="5400" id="mun-scar-h">
-      <label for="mun-scar-h">Scar-H - R$ 5.400</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="5200" id="mun-mtar-21">
-      <label for="mun-mtar-21">Mtar-21 - R$ 5.200</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="5000" id="mun-ak47">
-      <label for="mun-ak47">Ak47 - R$ 5.000</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="4800" id="mun-mp9">
-      <label for="mun-mp9">Mp9 - R$ 4.800</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="3400" id="mun-machini">
-      <label for="mun-machini">Machini - R$ 3.400</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="3650" id="mun-navy-carabine">
-      <label for="mun-navy-carabine">Navy Carabine - R$ 3.650</label>
-      <input type="number" class="quantidade" value="1" min="1" disabled>
-    </div>
-    <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="6500" id="mun-pistol">
-      <label for="mun-pistol">Pistola .50 / Five - R$ 6.500</label>
+      <input type="checkbox" class="item" data-valor="6800" id="mun-sniper">
+      <label for="sniper">Sniper - R$ 6.800</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
   </div>
@@ -155,13 +310,33 @@
   <div class="drugs">
     <h3>Drogas</h3>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="12000" id="para-uso">
-      <label for="para-uso">Para uso - R$ 12.000</label>
+      <input type="checkbox" class="item" data-valor="2000" id="maconha-para-venda">
+      <label for="maconha-para-venda">MACONHA PARA VENDA - R$ 2.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
     <div class="linha-item">
-      <input type="checkbox" class="item" data-valor="3500" id="para-venda">
-      <label for="para-venda">Para venda - R$ 3.500</label>
+      <input type="checkbox" class="item" data-valor="11000" id="maconha-para-uso">
+      <label for="maconha-para-uso">MACONHA PARA USO - R$ 11.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="2000" id="cocaina-para-venda">
+      <label for="cocaina-para-venda">COCAÍNA PARA VENDA - R$ 2.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="10000" id="cocaina-para-uso">
+      <label for="cocaina-para-uso">COCAÍNA PARA USO - R$ 10.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="10000" id="lsd">
+      <label for="lsd">LSD - R$ 10.000</label>
+      <input type="number" class="quantidade" value="1" min="1" disabled>
+    </div>
+    <div class="linha-item">
+      <input type="checkbox" class="item" data-valor="10000" id="heroina">
+      <label for="heroina">HEROÍNA - R$ 10.000</label>
       <input type="number" class="quantidade" value="1" min="1" disabled>
     </div>
   </div>
